unnested listings routes, added pagination

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,7 @@
-<h1> Profile page </h1>
+<h1> Welcome to my profile page! </h1>
+
+
+<br /><br />
+
+<%= @user.first_name %> <%= @user.last_name %><br />
+<%= @user.email %> <br />
