--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -6,14 +6,29 @@
 <%= @listing.description %> <br />
 <%= @listing.address %> <br />
 <%= @listing.home_type %> <br />
+
 <h4> Accommodates: </h4> <%= @listing.accommodates %>
 <h4> No. of bedrooms: </h4> <%= @listing.bedroom %>
 <h4> No. of bathrooms: </h4> <%= @listing.bathroom %>
+
 <h4> Kitchen Available: </h4>
 <% @listing.is_kitchen %>
-<% if true %>
-	<%= "yes" %>
-<% end %>
+	<% if true %>
+		<%= "yes" %>
+	<% else %>
+		<%= "no" %>
+	<% end %>
+
+<h4> Internet Available: </h4>
+<% @listing.is_internet %>
+	<% if true %>
+			<%= "yes" %>
+	<% else %>
+		<%= "no" %>
+	<% end %>
+
+
 
 <br />
 <br />
+
