--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,6 +2,12 @@
 <p>Welcome to Pairbnb</p>
 <%= link_to "Sign in with Google", "/auth/google_oauth2" %>
 
+<h1>Listings</h1>
+<ul>
+<% @listings.all.each do |listing|%>
 
-
-
+	<%= render listing %>
+<% end %>
+</ul>
+<br />
+<%= will_paginate @listings, :page_links => false %>
